replace material-ui from Ant-ui

--- a/src/style.css
+++ b/src/style.css
@@ -1,6 +1,3 @@
-.quantity {
-    width: 60px
-}
 
 input[type="text"], input[type="number"] {
     margin-right: 10px;
@@ -10,3 +7,8 @@ input[type="text"], input[type="number"] {
     margin-right: 10px;
     margin-bottom: 5px;
 }
+
+.example-input .ant-input {
+    width: 200px;
+    margin: 0 8px 8px 0;
+  }
